# mlops_toyexample

./: README.md  pyproject.toml  tasks.py
configs/logs/: filter_classes.py  log_configs.json
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlruns/.trash/982302893041600849/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/1ea867cadfc2436f918a2e29322b4468/: meta.yaml
mlruns/0/316410355ba64ecba8467b7725ab0ece/: meta.yaml
mlruns/231054548487661123/: meta.yaml
mlruns/231054548487661123/05c0a9e5e10f456c9c013fe57ce74855/: meta.yaml
mlruns/231054548487661123/1a7016e430724d959c2b8e822d41720a/: meta.yaml
mlruns/231054548487661123/29abeb280e40433fb56f46296bb1126a/: meta.yaml
mlruns/231054548487661123/2b3d23e7a3f2494b99c04f03b97e5676/: meta.yaml
mlruns/231054548487661123/388f502e36e54e829edd41db6e27cc26/: meta.yaml
mlruns/231054548487661123/427e7dcfbb664eafbfd62ae2bcb0c3fe/: meta.yaml
mlruns/231054548487661123/42a9d5f9100a4929a9efc4fdfd3cf34d/: meta.yaml
mlruns/231054548487661123/48338535dec94439bae8e2b6b3b9b2c0/: meta.yaml
mlruns/231054548487661123/4c0e0f351d8d4892bcdfb6c0dc66e18e/: meta.yaml
mlruns/231054548487661123/51b91d4920ab416ba9f666c7538bb1ea/: meta.yaml
mlruns/231054548487661123/60599ea0b108473f85b68c6c600417b5/: meta.yaml
mlruns/231054548487661123/7367ba38bcb743b8b06cf87f92d918c0/: meta.yaml
mlruns/231054548487661123/737aee58a8244fbca9dd530a19a2d89c/: meta.yaml
src/project_pandora_toy/: inference_loop.py  train.py  utils.py
tests/: test_data.py
(+227 files in other folders)
